# fee

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
benches/: bench_cmp.rs  bench_eval.rs  bench_evaluators.rs  bench_parse.rs  bench_parsers.rs  bench_resolve.rs  bench_resolvers.rs  bench_var_resolvers.rs
scripts/: plot.sh  plot_benches.py
src/: benches.rs  error.rs  lexer.rs  lib.rs  op.rs  parsing.rs  prelude.rs  token.rs
src/context/: mod.rs
src/evaluator/: irpn.rs  mod.rs  rpn.rs
src/expr/: ifrpn.rs  infix.rs  irpn.rs  ivrpn.rs  lexer.rs  lrpn.rs  mod.rs  rpn.rs
src/expr/rpn/: ifrpn.rs  irpn.rs  ivrpn.rs  mod.rs  rpn.rs
src/function/: default.rs  mod.rs
src/resolver/: constant.rs  default.rs  empty.rs  indexed.rs  mod.rs  small.rs
src/variable/: default.rs  indexed.rs  mod.rs  small.rs
tests/: default_eval_test.rs  test_default_eval.rs  test_eval.rs  test_ptr.rs  test_readme.rs  test_resolvers.rs  test_rpn_eval.rs
