[package]
name = "fee"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.16" }

[features]
default = []
bench-internal = []

[dev-dependencies]
criterion = { version = "0.7.0" }
fee = { path = ".", features = ["bench-internal"]}

# Other expr evaluator to compite against
evalexpr = "12.0.2"
meval = "0.2.0"
mexe = "0.2.0"

[profile.bench]
opt-level = 3
debug = false
lto = "fat"

[[bench]]
name = "bench_var_resolvers"
harness = false

[[bench]]
name = "bench_evaluators"
harness = false

[[bench]]
name = "bench_parsers"
harness = false

[[bench]]
name = "bench_cmp"
harness = false