[package]
name = "fee"
version = "0.2.0"
edition = "2024"

authors = ["Borja Castellano <borjacastellano1@gmail.com>"]
description = "The fastest expression evaluators"
keywords = ["math", "expression", "parser", "evaluator", "scientific"]
categories = ["mathematics", "science", "parser-implementations"]
repository = "https://github.com/ZocoLini/fee"
documentation = "https://docs.rs/fee"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = { version = "2.0.16" }
smallvec = { version = "1.15.1" }

[features]
default = []

[dev-dependencies]
criterion = { version = "0.7.0" }

# Other expr evaluator to compite against
evalexpr = "12.0.2"
meval = "0.2.0"
fasteval = "0.2.4"

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
overflow-checks = false
incremental = false

[[bench]]
name = "bench_resolve"
harness = false

[[bench]]
name = "bench_eval"
harness = false

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_cmp"
harness = false
